--- a/vcastplay-cms/src/app/pages/settings/tags/tags.component.html
+++ b/vcastplay-cms/src/app/pages/settings/tags/tags.component.html
@@ -1,53 +1,54 @@
 <div class="flex flex-col gap-1 h-full">
     <app-breadcrumbs [menu]="pageInfo"></app-breadcrumbs>
-
-    <div class="flex-1 grid md:grid-cols-2 xl:grid-cols-3 gap-4">
-        @for (item of filteredAudienceTagList(); track $index) {
-            <p-card styleClass="h-full">
-                <ng-container *ngTemplateOutlet="audienceTagInput; context: {
-                    control: audienceTagControl,
-                    label: item.name,
-                    id: item.id,
-                    onClick: onClickSave,
-                    type: item.id,
-                    index: $index
-                }"></ng-container>
-                <div class="mt-4 p-3">
-                    <p-table
-                        [value]="item.data()"
-                        selectionMode="single"
-                        [scrollable]="true"
-                        scrollHeight="300px"
-                        size="small"
-                        stripedRows
-                    >
-                        <ng-template #header>
-                            <tr>
-                                <th>{{ item.name }}</th>
-                                <th style="width: 12%;">
-                                    <div class="text-center">Actions</div>
-                                </th>
-                            </tr>
-                        </ng-template>
-                        <ng-template #body let-tag>
-                            <tr>
-                                <td>{{ tag }}</td>
-                                <td class="flex justify-center">
-                                    <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: tag, type: item.id }"></ng-container>
-                                </td>
-                            </tr>
-                        </ng-template>
-                        <ng-template #emptymessage>
-                            <tr>
-                                <td colspan="2">
-                                    <div class="flex justify-center p-5"><p>No {{ item.name }} found</p></div>
-                                </td>
-                            </tr>
-                        </ng-template>
-                    </p-table>
-                </div>
-            </p-card>
-        }
+    <div class="flex-1">
+        <p-card styleClass="h-full">
+            <p-tabs [value]="0" [showNavigators]="false" [lazy]="true" [selectOnFocus]="true" scrollable>
+                <p-tablist>
+                    @for (tab of filteredAudienceTagList(); track $index) {
+                        <p-tab [value]="$index">{{ tab.name }}</p-tab>
+                    }
+                </p-tablist>
+                <p-tabpanels>
+                    @for (tab of filteredAudienceTagList(); track $index) {
+                        <p-tabpanel [value]="$index">
+                            <div class="my-3">
+                                <ng-container *ngTemplateOutlet="audienceTagInput; context: {
+                                    control: audienceTagControl,
+                                    label: tab.name,
+                                    id: tab.id,
+                                    onClick: onClickSave,
+                                    type: tab.id,
+                                    index: $index
+                                }"></ng-container>
+                            </div>
+                            <p-table [value]="tab.data()" size="small">
+                                <ng-template #header>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th style="width: 5rem;">Actions</th>
+                                    </tr>
+                                </ng-template>
+                                <ng-template #body let-item>
+                                    <tr>
+                                        <td>{{ item }}</td>
+                                        <td class="flex flex-row justify-center gap-2">
+                                            <ng-container *ngTemplateOutlet="actionBtn; context: { $implicit: item, type: tab.id }"></ng-container>
+                                        </td>
+                                    </tr>
+                                </ng-template>
+                                <ng-template #emptymessage>
+                                    <tr>
+                                        <td colspan="2" [height]="20">
+                                            <div class="flex justify-center p-5"><p class="italic">No Data found</p></div>
+                                        </td>
+                                    </tr>
+                                </ng-template>
+                            </p-table>
+                        </p-tabpanel>
+                    }
+                </p-tabpanels>
+            </p-tabs>
+        </p-card>
     </div>
 </div>
 
